--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
-body #main-wrapper .product-wrapper {
-  width: 400px;
-  height: auto; }
+body {
+  background-color: blue; }
+  body #main-wrapper .product-wrapper {
+    width: 400px;
+    height: auto; }
