--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
-/*
-Theme Name: THEME NAME
-Theme URI: http://www.WEBSITEURL.SE
-Author: Posh Industries AB (Jenni Pulli)
-Author URI: http://posh.se
-Description: DESCRIPTION
-Version: 1.0
-*/
+body {
+  background-color: blue; }
+  body #main-wrapper .product-wrapper {
+    width: 400px;
+    height: auto; }
