nu funkar sass/css för mig
nu funkar sassen

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
-body{
-	#main-wrapper{
-		.product-wrapper{
+body {
+	#wrapper {
+		width: 40%;
+		margin: 0 auto;
+		.product-wrapper {
 			width: 400px;
 			height: auto;
 		}
