--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,11 +1,16 @@
 body {
 	#wrapper {
-		width: 40%;
-		margin: 0 auto;
+		width: 90%;
+		height: auto;
+		margin-top: 20px;
+		margin-left: auto;
+		margin-right: auto;
 
 		.product-wrapper {
 			width: 400px;
 			height: auto;
+			float: left;
+
 		}
 	}
 }
