--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-/* line 2, scss/style.scss */
 body #wrapper {
-  width: 40%;
-  margin: 0 auto;
-}
-/* line 6, scss/style.scss */
-body #wrapper .product-wrapper {
-  width: 400px;
+  width: 90%;
   height: auto;
-}
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto; }
+  body #wrapper .product-wrapper {
+    width: 400px;
+    height: auto;
+    float: left; }
