--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
-body #wrapper {
-  width: 85%;
-  height: auto;
-  margin-top: 20px;
-  margin-left: auto;
-  margin-right: auto; }
-  body #wrapper .product-wrapper {
-    width: 400px;
+body {
+  background-image: url("img/background.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed; }
+  body #wrapper {
+    width: 85%;
     height: auto;
-    display: inline-block;
-    margin-left: 100px;
-    margin-bottom: 10px; }
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto; }
+    body #wrapper .product-wrapper {
+      width: 400px;
+      height: auto;
+      display: inline-block;
+      margin-left: 100px;
+      margin-bottom: 10px;
+      background-color: white;
+      box-shadow: 10px 10px 5px #888888; }
