--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,5 +17,10 @@ body {
 			background-color: white;
 			box-shadow: 10px 10px 5px #888888;
 		}
+		.primary-sidebar {
+			height: 500px;
+			width: 100%;
+			background-color: red;
+		}
 	}
 }
