--- a/style.css
+++ b/style.css
@@ -1,18 +1,30 @@
+/* line 1, scss/style.scss */
 body {
   background-image: url("img/background.jpg");
   background-repeat: no-repeat;
-  background-attachment: fixed; }
-  body #wrapper {
-    width: 85%;
-    height: auto;
-    margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto; }
-    body #wrapper .product-wrapper {
-      width: 400px;
-      height: auto;
-      display: inline-block;
-      margin-left: 100px;
-      margin-bottom: 10px;
-      background-color: white;
-      box-shadow: 10px 10px 5px #888888; }
+  background-attachment: fixed;
+}
+/* line 5, scss/style.scss */
+body #wrapper {
+  width: 85%;
+  height: auto;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* line 11, scss/style.scss */
+body #wrapper .product-wrapper {
+  width: 400px;
+  height: auto;
+  display: inline-block;
+  margin-left: 100px;
+  margin-bottom: 10px;
+  background-color: white;
+  box-shadow: 10px 10px 5px #888888;
+}
+/* line 20, scss/style.scss */
+body #wrapper .primary-sidebar {
+  height: 500px;
+  width: 100%;
+  background-color: red;
+}
