funkar ej :saxophone:
bajs

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,12 +17,12 @@ body {
 			background-color: white;
 			box-shadow: 10px 10px 5px #888888;
 		}
-		.primary-sidebar {
+		#primary-sidebar {
 			height: 500px;
 			width: 100%;
 			background-color: red;
 		}
-		#single-bix{
+		#single-box{
 			width: 90%;
 			height: 90%;
 			z-index: 1;
