--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,8 +26,10 @@ body {
 			width: 90%;
 			height: 90%;
 			z-index: 1;
-			background-color: blue;
 			position: fixed;
+			#single-post{
+				
+			}
 		}
 	}
 }
