--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,10 +17,10 @@ body {
 			background-color: white;
 			box-shadow: 10px 10px 5px #888888;
 		}
-		#primary-sidebar {
+		.widget_area {
+			z-index: 1;
 			height: 500px;
 			width: 100%;
-			background-color: red;
 		}
 		#single-box{
 			width: 90%;
