--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@ body {
 	background-repeat:no-repeat;
 	background-attachment:fixed;
 	#wrapper {
-		width: 85%;
+		width: 80%;
 		height: auto;
 		margin-top: 20px;
 		margin-left: auto;
@@ -24,6 +24,22 @@ body {
 			position: absolute;
 			#single-post{
 				
+			}
+			#inner {
+				width: 100%;
+				height: 400px;
+				overflow: hidden;
+				position: absolute;
+				top: 50%;
+				left: 0;
+				margin: -100px 0 0 0;
+			}
+			#carousel img {
+				height: auto;
+				border: none;
+				display: block;
+				float: left;
+				padding: 0 10px;
 			}
 		}
 	}
