--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,27 +20,34 @@ body {
 		#single-box{
 			width: 90%;
 			height: 90%;
-			z-index: 1;
-			position: absolute;
+			z-index: 100;
+			position: fixed;
+			//right: 0px;
+			top: 100;
+			float: center;
+			margin-left: auto;
+			margin-right: auto;
+			background-color: white;
 			#single-post{
 				
 			}
-			#inner {
-				width: 100%;
-				height: 400px;
-				overflow: hidden;
-				position: absolute;
-				top: 50%;
-				left: 0;
-				margin: -100px 0 0 0;
-			}
-			#carousel img {
-				height: auto;
-				border: none;
-				display: block;
-				float: left;
-				padding: 0 10px;
-			}
+		}	
+		#inner {
+			width: 100%;
+			height: 400px;
+			overflow: hidden;
+			position: absolute;
+			top: 50%;
+			left: 0;
+			margin: -100px 0 0 0;
 		}
+		#carousel img {
+			height: auto;
+			border: none;
+			display: block;
+			float: left;
+			padding: 0 10px;
+		}
+		
 	}
 }
