--- a/style.css
+++ b/style.css
@@ -1,49 +1,42 @@
-/* line 1, scss/style.scss */
 body {
   background-image: url("img/background.jpg");
   background-repeat: no-repeat;
-  background-attachment: fixed;
-}
-/* line 5, scss/style.scss */
-body #wrapper {
-  width: 80%;
-  height: auto;
-  margin-top: 20px;
-  margin-left: auto;
-  margin-right: auto;
-}
-/* line 11, scss/style.scss */
-body #wrapper .product-wrapper {
-  width: 400px;
-  height: auto;
-  display: inline-block;
-  margin-left: 100px;
-  margin-bottom: 10px;
-  background-color: white;
-  box-shadow: 10px 10px 5px #888888;
-}
-/* line 20, scss/style.scss */
-body #wrapper #single-box {
-  width: 90%;
-  height: 90%;
-  z-index: 1;
-  position: absolute;
-}
-/* line 28, scss/style.scss */
-body #wrapper #single-box #inner {
-  width: 100%;
-  height: 400px;
-  overflow: hidden;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  margin: -100px 0 0 0;
-}
-/* line 37, scss/style.scss */
-body #wrapper #single-box #carousel img {
-  height: auto;
-  border: none;
-  display: block;
-  float: left;
-  padding: 0 10px;
-}
+  background-attachment: fixed; }
+  body #wrapper {
+    width: 80%;
+    height: auto;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto; }
+    body #wrapper .product-wrapper {
+      width: 400px;
+      height: auto;
+      display: inline-block;
+      margin-left: 100px;
+      margin-bottom: 10px;
+      background-color: white;
+      box-shadow: 10px 10px 5px #888888; }
+    body #wrapper #single-box {
+      width: 90%;
+      height: 90%;
+      z-index: 100;
+      position: fixed;
+      top: 100;
+      float: center;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: white; }
+    body #wrapper #inner {
+      width: 100%;
+      height: 400px;
+      overflow: hidden;
+      position: absolute;
+      top: 50%;
+      left: 0;
+      margin: -100px 0 0 0; }
+    body #wrapper #carousel img {
+      height: auto;
+      border: none;
+      display: block;
+      float: left;
+      padding: 0 10px; }
