--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,11 +20,11 @@ body {
 		#single-box{
 			width: 90%;
 			height: 90%;
+			margin-right: auto;
+			margin-left: auto;
 			z-index: 100;
-			position: fixed;
-			//right: 0px;
-			top: 100;
-			float: center;
+			//position: absolute;
+			margin-top: -1100px;
 			margin-left: auto;
 			margin-right: auto;
 			background-color: white;
