--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,20 @@ body {
 		margin-top: 20px;
 		margin-left: auto;
 		margin-right: auto;
+		#overlay {
+			display: none;
+			background-color: rgba(0, 0, 0, 0.8);
+			left: 50%;
+			top: 50%;
+			position: fixed;
+			z-index: 99;
+
+			height: 1400px;
+			margin-top: -700px;
+
+			width: 2400px;
+			margin-left: -1200px;
+		}
 		.product-wrapper {
 			width: 400px;
 			height: auto;
@@ -18,16 +32,18 @@ body {
 			box-shadow: 10px 10px 5px #888888;
 		}
 		#single-box{
-			width: 90%;
-			height: 90%;
-			margin-right: auto;
-			margin-left: auto;
-			z-index: 100;
-			//position: absolute;
-			margin-top: -1100px;
-			margin-left: auto;
-			margin-right: auto;
+			border: solid 1px black;
+			position: fixed;
+			left: 50%;
+			top: 50%;
 			background-color: white;
+			z-index: 100;
+
+			height: 500px;
+			margin-top: -250px;
+
+			width: 800px;
+			margin-left: -400px;
 			#single-post{
 				
 			}
