--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,12 +2,40 @@ body {
 	background-image: url("img/background.jpg");
 	background-repeat:no-repeat;
 	background-attachment:fixed;
+
 	#wrapper {
 		width: 80%;
 		height: auto;
-		margin-top: 20px;
+		margin-top: 70px;
 		margin-left: auto;
 		margin-right: auto;
+		#header{
+			width: 100%;
+			height: 55px;
+			top: 0;
+			background-color: white;
+			position: fixed;
+			left: 0;
+			#Header-logo{
+				width: 40px;
+				height: 50px;
+				display: block;
+				position: absolute;
+				margin-left: 48.5%;
+			}
+			#shoppingcart-img{
+				width: 50px;
+				height: 50px;
+				right: 0;
+				display: inline;
+				position: absolute;
+				margin-top: 2.5px;
+				margin-right: 5px;
+			}
+			#item-holder{
+
+			}
+		}
 		#overlay {
 			display: none;
 			background-color: rgba(0, 0, 0, 0.8);
