--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,8 @@ body {
 			background-color: white;
 			position: fixed;
 			left: 0;
+			z-index: 75;
+			
 			#Header-logo{
 				width: 40px;
 				height: 50px;
@@ -31,18 +33,30 @@ body {
 				position: absolute;
 				margin-top: 2.5px;
 				margin-right: 5px;
-			}
-			#item-holder{
 
 			}
+			
+			
 		}
+		#item-holder{
+			background-color: white;
+			width: 300px;
+			height: auto;
+			right: 0;
+			top: 0;
+			margin-top: 55px;
+			position: absolute;
+			z-index: 50;
+			display: none;
+			}
+		
 		#overlay {
 			display: none;
 			background-color: rgba(0, 0, 0, 0.8);
 			left: 50%;
 			top: 50%;
 			position: fixed;
-			z-index: 99;
+			z-index: 25;
 
 			height: 1400px;
 			margin-top: -700px;
