--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body {
       top: 0;
       background-color: white;
       position: fixed;
-      left: 0; }
+      left: 0;
+      z-index: 75; }
       body #wrapper #header #Header-logo {
         width: 40px;
         height: 50px;
@@ -29,13 +30,23 @@ body {
         position: absolute;
         margin-top: 2.5px;
         margin-right: 5px; }
+    body #wrapper #item-holder {
+      background-color: white;
+      width: 300px;
+      height: auto;
+      right: 0;
+      top: 0;
+      margin-top: 55px;
+      position: absolute;
+      z-index: 50;
+      display: none; }
     body #wrapper #overlay {
       display: none;
       background-color: rgba(0, 0, 0, 0.8);
       left: 50%;
       top: 50%;
       position: fixed;
-      z-index: 99;
+      z-index: 25;
       height: 1400px;
       margin-top: -700px;
       width: 2400px;
