--- a/style.css
+++ b/style.css
@@ -2,91 +2,6 @@
 body {
   background-image: url("img/background.jpg");
   background-repeat: no-repeat;
-<<<<<<< HEAD
-  background-attachment: fixed; }
-  body #wrapper {
-    width: 80%;
-    height: auto;
-    margin-top: 70px;
-    margin-left: auto;
-    margin-right: auto; }
-    body #wrapper #header {
-      width: 100%;
-      height: 55px;
-      top: 0;
-      background-color: white;
-      position: fixed;
-      left: 0;
-      z-index: 75; }
-      body #wrapper #header #Header-logo {
-        width: 40px;
-        height: 50px;
-        display: block;
-        position: absolute;
-        margin-left: 48.5%; }
-      body #wrapper #header #shoppingcart-img {
-        width: 50px;
-        height: 50px;
-        right: 0;
-        display: inline;
-        position: absolute;
-        margin-top: 2.5px;
-        margin-right: 5px; }
-    body #wrapper #item-holder {
-      background-color: white;
-      width: 300px;
-      height: auto;
-      right: 0;
-      top: 0;
-      margin-top: 55px;
-      position: absolute;
-      z-index: 50;
-      display: none; }
-    body #wrapper #overlay {
-      display: none;
-      background-color: rgba(0, 0, 0, 0.8);
-      left: 50%;
-      top: 50%;
-      position: fixed;
-      z-index: 25;
-      height: 1400px;
-      margin-top: -700px;
-      width: 2400px;
-      margin-left: -1200px; }
-    body #wrapper .product-wrapper {
-      width: 400px;
-      height: auto;
-      display: inline-block;
-      margin-left: 100px;
-      margin-bottom: 10px;
-      background-color: white;
-      box-shadow: 10px 10px 5px #888888; }
-    body #wrapper #single-box {
-      border: solid 1px black;
-      position: fixed;
-      left: 50%;
-      top: 50%;
-      background-color: white;
-      z-index: 100;
-      height: 500px;
-      margin-top: -250px;
-      width: 800px;
-      margin-left: -400px; }
-    body #wrapper #inner {
-      width: 100%;
-      height: 400px;
-      overflow: hidden;
-      position: absolute;
-      top: 50%;
-      left: 0;
-      margin: -100px 0 0 0; }
-    body #wrapper #carousel img {
-      height: auto;
-      border: none;
-      display: block;
-      float: left;
-      padding: 0 10px; }
-=======
   background-attachment: fixed;
 }
 /* line 6, scss/style.scss */
@@ -97,7 +12,11 @@ body #wrapper {
   margin-left: auto;
   margin-right: auto;
 }
-/* line 12, scss/style.scss */
+/* line 13, scss/style.scss */
+body #wrapper #categories {
+  margin-top: 20px;
+}
+/* line 17, scss/style.scss */
 body #wrapper #header {
   width: 100%;
   height: 55px;
@@ -105,8 +24,9 @@ body #wrapper #header {
   background-color: white;
   position: fixed;
   left: 0;
+  z-index: 75;
 }
-/* line 19, scss/style.scss */
+/* line 26, scss/style.scss */
 body #wrapper #header #Header-logo {
   width: 40px;
   height: 50px;
@@ -114,7 +34,7 @@ body #wrapper #header #Header-logo {
   position: absolute;
   margin-left: 48.5%;
 }
-/* line 26, scss/style.scss */
+/* line 33, scss/style.scss */
 body #wrapper #header #shoppingcart-img {
   width: 50px;
   height: 50px;
@@ -124,20 +44,32 @@ body #wrapper #header #shoppingcart-img {
   margin-top: 2.5px;
   margin-right: 5px;
 }
-/* line 39, scss/style.scss */
+/* line 43, scss/style.scss */
+body #wrapper #item-holder {
+  background-color: white;
+  width: 300px;
+  height: auto;
+  right: 0;
+  top: 0;
+  margin-top: 55px;
+  position: absolute;
+  z-index: 50;
+  display: none;
+}
+/* line 55, scss/style.scss */
 body #wrapper #overlay {
   display: none;
   background-color: rgba(0, 0, 0, 0.8);
   left: 50%;
   top: 50%;
   position: fixed;
-  z-index: 99;
+  z-index: 25;
   height: 1400px;
   margin-top: -700px;
   width: 2400px;
   margin-left: -1200px;
 }
-/* line 53, scss/style.scss */
+/* line 69, scss/style.scss */
 body #wrapper #product-wrapper {
   width: 400px;
   height: auto;
@@ -147,7 +79,7 @@ body #wrapper #product-wrapper {
   background-color: white;
   box-shadow: 10px 10px 5px #888888;
 }
-/* line 63, scss/style.scss */
+/* line 79, scss/style.scss */
 body #wrapper #single-box {
   border: solid 1px black;
   position: fixed;
@@ -160,7 +92,7 @@ body #wrapper #single-box {
   width: 800px;
   margin-left: -400px;
 }
-/* line 80, scss/style.scss */
+/* line 96, scss/style.scss */
 body #wrapper #inner {
   width: 100%;
   height: 400px;
@@ -170,7 +102,7 @@ body #wrapper #inner {
   left: 0;
   margin: -100px 0 0 0;
 }
-/* line 89, scss/style.scss */
+/* line 105, scss/style.scss */
 body #wrapper #carousel img {
   height: auto;
   border: none;
@@ -178,4 +110,3 @@ body #wrapper #carousel img {
   float: left;
   padding: 0 10px;
 }
->>>>>>> origin/master
