--- a/style.css
+++ b/style.css
@@ -14,9 +14,25 @@ body #wrapper {
 }
 /* line 13, scss/style.scss */
 body #wrapper #categories {
+  height: 100px;
+  width: 100%;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
-/* line 17, scss/style.scss */
+/* line 19, scss/style.scss */
+body #wrapper #categories li {
+  list-style-type: none;
+  float: left;
+  margin-left: 10px;
+  display: inline-block;
+  background-color: orange;
+}
+/* line 27, scss/style.scss */
+body #wrapper #categories a {
+  text-decoration: none;
+  color: black;
+}
+/* line 33, scss/style.scss */
 body #wrapper #header {
   width: 100%;
   height: 55px;
@@ -26,7 +42,7 @@ body #wrapper #header {
   left: 0;
   z-index: 75;
 }
-/* line 26, scss/style.scss */
+/* line 42, scss/style.scss */
 body #wrapper #header #Header-logo {
   width: 40px;
   height: 50px;
@@ -34,7 +50,7 @@ body #wrapper #header #Header-logo {
   position: absolute;
   margin-left: 48.5%;
 }
-/* line 33, scss/style.scss */
+/* line 49, scss/style.scss */
 body #wrapper #header #shoppingcart-img {
   width: 50px;
   height: 50px;
@@ -44,7 +60,7 @@ body #wrapper #header #shoppingcart-img {
   margin-top: 2.5px;
   margin-right: 5px;
 }
-/* line 43, scss/style.scss */
+/* line 59, scss/style.scss */
 body #wrapper #item-holder {
   background-color: white;
   width: 300px;
@@ -56,7 +72,7 @@ body #wrapper #item-holder {
   z-index: 50;
   display: none;
 }
-/* line 55, scss/style.scss */
+/* line 71, scss/style.scss */
 body #wrapper #overlay {
   display: none;
   background-color: rgba(0, 0, 0, 0.8);
@@ -69,7 +85,7 @@ body #wrapper #overlay {
   width: 2400px;
   margin-left: -1200px;
 }
-/* line 69, scss/style.scss */
+/* line 85, scss/style.scss */
 body #wrapper #product-wrapper {
   width: 400px;
   height: auto;
@@ -79,7 +95,7 @@ body #wrapper #product-wrapper {
   background-color: white;
   box-shadow: 10px 10px 5px #888888;
 }
-/* line 79, scss/style.scss */
+/* line 95, scss/style.scss */
 body #wrapper #single-box {
   border: solid 1px black;
   position: fixed;
@@ -92,7 +108,7 @@ body #wrapper #single-box {
   width: 800px;
   margin-left: -400px;
 }
-/* line 96, scss/style.scss */
+/* line 112, scss/style.scss */
 body #wrapper #inner {
   width: 100%;
   height: 400px;
@@ -102,7 +118,7 @@ body #wrapper #inner {
   left: 0;
   margin: -100px 0 0 0;
 }
-/* line 105, scss/style.scss */
+/* line 121, scss/style.scss */
 body #wrapper #carousel img {
   height: auto;
   border: none;
