--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,9 @@
 body {
-	background-image: url("img/background.jpg");
+	background-image: url("img/bakgrund2.jpg");
+	background-size: 100vw 100vh;
 	background-repeat:no-repeat;
 	background-attachment:fixed;
+
 
 	#wrapper {
 		width: 80%;
