--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
+/* line 1, scss/style.scss */
 body {
   background-image: url("img/bakgrund2.jpg");
   background-size: 100vw 100vh;
   background-repeat: no-repeat;
-<<<<<<< Updated upstream
   background-attachment: fixed;
 }
-/* line 6, scss/style.scss */
+/* line 8, scss/style.scss */
 body #wrapper {
   width: 80%;
   height: auto;
@@ -13,27 +13,32 @@ body #wrapper {
   margin-left: auto;
   margin-right: auto;
 }
-/* line 13, scss/style.scss */
+/* line 15, scss/style.scss */
 body #wrapper #categories {
   height: 100px;
   width: 100%;
   margin-top: 20px;
   margin-bottom: 20px;
 }
-/* line 19, scss/style.scss */
+/* line 21, scss/style.scss */
 body #wrapper #categories li {
+  width: 110px;
+  border-radius: 5px;
+  height: 30px;
   list-style-type: none;
   float: left;
   margin-left: 10px;
   display: inline-block;
-  background-color: orange;
+  background-color: #0096db;
 }
-/* line 27, scss/style.scss */
+/* line 32, scss/style.scss */
 body #wrapper #categories a {
   text-decoration: none;
-  color: black;
+  color: white;
+  text-align: center;
+  text-transform: uppercase;
 }
-/* line 33, scss/style.scss */
+/* line 40, scss/style.scss */
 body #wrapper #header {
   width: 100%;
   height: 55px;
@@ -43,7 +48,7 @@ body #wrapper #header {
   left: 0;
   z-index: 75;
 }
-/* line 42, scss/style.scss */
+/* line 49, scss/style.scss */
 body #wrapper #header #Header-logo {
   width: 40px;
   height: 50px;
@@ -51,7 +56,7 @@ body #wrapper #header #Header-logo {
   position: absolute;
   margin-left: 48.5%;
 }
-/* line 49, scss/style.scss */
+/* line 56, scss/style.scss */
 body #wrapper #header #shoppingcart-img {
   width: 50px;
   height: 50px;
@@ -61,7 +66,7 @@ body #wrapper #header #shoppingcart-img {
   margin-top: 2.5px;
   margin-right: 5px;
 }
-/* line 59, scss/style.scss */
+/* line 66, scss/style.scss */
 body #wrapper #item-holder {
   background-color: white;
   width: 300px;
@@ -73,7 +78,7 @@ body #wrapper #item-holder {
   z-index: 50;
   display: none;
 }
-/* line 71, scss/style.scss */
+/* line 78, scss/style.scss */
 body #wrapper #overlay {
   display: none;
   background-color: rgba(0, 0, 0, 0.8);
@@ -86,7 +91,7 @@ body #wrapper #overlay {
   width: 2400px;
   margin-left: -1200px;
 }
-/* line 85, scss/style.scss */
+/* line 92, scss/style.scss */
 body #wrapper #product-wrapper {
   width: 400px;
   height: auto;
@@ -96,7 +101,7 @@ body #wrapper #product-wrapper {
   background-color: white;
   box-shadow: 10px 10px 5px #888888;
 }
-/* line 95, scss/style.scss */
+/* line 102, scss/style.scss */
 body #wrapper #single-box {
   border: solid 1px black;
   position: fixed;
@@ -109,7 +114,19 @@ body #wrapper #single-box {
   width: 800px;
   margin-left: -400px;
 }
-/* line 112, scss/style.scss */
+/* line 115, scss/style.scss */
+body #wrapper #single-box .product_image {
+  float: left;
+  position: relative;
+}
+/* line 119, scss/style.scss */
+body #wrapper #single-box .product_info {
+  float: left;
+  position: relative;
+  width: 300px;
+  margin-left: 100px;
+}
+/* line 126, scss/style.scss */
 body #wrapper #inner {
   width: 100%;
   height: 400px;
@@ -119,7 +136,7 @@ body #wrapper #inner {
   left: 0;
   margin: -100px 0 0 0;
 }
-/* line 121, scss/style.scss */
+/* line 135, scss/style.scss */
 body #wrapper #carousel img {
   height: auto;
   border: none;
@@ -127,90 +144,3 @@ body #wrapper #carousel img {
   float: left;
   padding: 0 10px;
 }
-=======
-  background-attachment: fixed; }
-  body #wrapper {
-    width: 80%;
-    height: auto;
-    margin-top: 70px;
-    margin-left: auto;
-    margin-right: auto; }
-    body #wrapper #categories {
-      margin-top: 20px; }
-    body #wrapper #header {
-      width: 100%;
-      height: 55px;
-      top: 0;
-      background-color: white;
-      position: fixed;
-      left: 0;
-      z-index: 75; }
-      body #wrapper #header #Header-logo {
-        width: 40px;
-        height: 50px;
-        display: block;
-        position: absolute;
-        margin-left: 48.5%; }
-      body #wrapper #header #shoppingcart-img {
-        width: 50px;
-        height: 50px;
-        right: 0;
-        display: inline;
-        position: absolute;
-        margin-top: 2.5px;
-        margin-right: 5px; }
-    body #wrapper #item-holder {
-      background-color: white;
-      width: 300px;
-      height: auto;
-      right: 0;
-      top: 0;
-      margin-top: 55px;
-      position: absolute;
-      z-index: 50;
-      display: none; }
-    body #wrapper #overlay {
-      display: none;
-      background-color: rgba(0, 0, 0, 0.8);
-      left: 50%;
-      top: 50%;
-      position: fixed;
-      z-index: 25;
-      height: 1400px;
-      margin-top: -700px;
-      width: 2400px;
-      margin-left: -1200px; }
-    body #wrapper #product-wrapper {
-      width: 400px;
-      height: auto;
-      display: inline-block;
-      margin-left: 100px;
-      margin-bottom: 10px;
-      background-color: white;
-      box-shadow: 10px 10px 5px #888888; }
-    body #wrapper #single-box {
-      border: solid 1px black;
-      position: fixed;
-      left: 50%;
-      top: 50%;
-      background-color: white;
-      z-index: 100;
-      height: 500px;
-      margin-top: -250px;
-      width: 800px;
-      margin-left: -400px; }
-    body #wrapper #inner {
-      width: 100%;
-      height: 400px;
-      overflow: hidden;
-      position: absolute;
-      top: 50%;
-      left: 0;
-      margin: -100px 0 0 0; }
-    body #wrapper #carousel img {
-      height: auto;
-      border: none;
-      display: block;
-      float: left;
-      padding: 0 10px; }
->>>>>>> Stashed changes
