--- a/style.css
+++ b/style.css
@@ -1,118 +1,167 @@
+/* line 1, scss/style.scss */
 body {
   background-image: url("img/bajsBild.jpg");
   background-size: 100vw 100vh;
   background-repeat: no-repeat;
-  background-attachment: fixed; }
-  body #wrapper {
-    width: 80%;
-    height: auto;
-    margin-top: 70px;
-    margin-left: auto;
-    margin-right: auto; }
-    body #wrapper #categories {
-      height: 100px;
-      width: 100%;
-      margin-top: 20px;
-      margin-bottom: 20px; }
-      body #wrapper #categories li {
-        width: 110px;
-        border-radius: 5px;
-        height: 30px;
-        list-style-type: none;
-        float: left;
-        margin-left: 10px;
-        display: inline-block;
-        background-color: #0096db; }
-      body #wrapper #categories a {
-        text-decoration: none;
-        color: white;
-        text-align: center;
-        text-transform: uppercase; }
-    body #wrapper #header {
-      width: 100%;
-      height: 55px;
-      top: 0;
-      background-color: white;
-      position: fixed;
-      left: 0;
-      z-index: 75; }
-      body #wrapper #header #Header-logo {
-        width: 40px;
-        height: 50px;
-        display: block;
-        position: absolute;
-        margin-left: 48.5%; }
-      body #wrapper #header #shoppingcart-img {
-        width: 50px;
-        height: 50px;
-        right: 0;
-        display: inline;
-        position: absolute;
-        margin-top: 2.5px;
-        margin-right: 5px; }
-    body #wrapper #item-holder {
-      background-color: white;
-      width: 300px;
-      height: auto;
-      right: 0;
-      top: 0;
-      margin-top: 55px;
-      position: absolute;
-      z-index: 50;
-      display: none; }
-    body #wrapper #overlay {
-      display: none;
-      background-color: rgba(0, 0, 0, 0.8);
-      left: 50%;
-      top: 50%;
-      position: fixed;
-      z-index: 25;
-      height: 1400px;
-      margin-top: -700px;
-      width: 2400px;
-      margin-left: -1200px; }
-    body #wrapper #product-wrapper {
-      width: 400px;
-      height: auto;
-      display: inline-block;
-      margin-left: 100px;
-      margin-bottom: 10px;
-      background-color: white;
-      box-shadow: 10px 10px 5px #888888; }
-    body #wrapper #single-box {
-      border: solid 1px black;
-      position: fixed;
-      left: 50%;
-      top: 50%;
-      background-color: white;
-      z-index: 100;
-      height: 500px;
-      margin-top: -250px;
-      width: 800px;
-      margin-left: -400px; }
-      body #wrapper #single-box .product_image {
-        float: left;
-        position: relative; }
-      body #wrapper #single-box .product_info {
-        float: left;
-        position: relative;
-        width: 300px;
-        margin-left: 100px; }
-    body #wrapper #inner {
-      width: 100%;
-      height: 400px;
-      overflow: hidden;
-      position: absolute;
-      top: 50%;
-      left: 0;
-      margin: -100px 0 0 0; }
-    body #wrapper #carousel img {
-      height: auto;
-      border: none;
-      display: block;
-      float: left;
-      padding: 0 10px; }
-  body #page-not-found img {
-    width: 100px;
-    height: auto;
-    width: 100%; }
+  background-attachment: fixed;
+}
+/* line 8, scss/style.scss */
+body #wrapper {
+  width: 80%;
+  height: auto;
+  margin-top: 70px;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* line 15, scss/style.scss */
+body #wrapper #categories {
+  height: 100px;
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+/* line 21, scss/style.scss */
+body #wrapper #categories li {
+  width: 110px;
+  border-radius: 5px;
+  height: 30px;
+  list-style-type: none;
+  float: left;
+  margin-left: 10px;
+  display: inline-block;
+  background-color: #0096db;
+}
+/* line 32, scss/style.scss */
+body #wrapper #categories a {
+  text-decoration: none;
+  color: white;
+  text-align: center;
+  text-transform: uppercase;
+}
+/* line 40, scss/style.scss */
+body #wrapper #header {
+  width: 100%;
+  height: 55px;
+  top: 0;
+  background-color: white;
+  position: fixed;
+  left: 0;
+  z-index: 75;
+}
+/* line 49, scss/style.scss */
+body #wrapper #header #Header-logo {
+  width: 40px;
+  height: 50px;
+  display: block;
+  position: absolute;
+  margin-left: 48.5%;
+}
+/* line 56, scss/style.scss */
+body #wrapper #header #shoppingcart-img {
+  width: 50px;
+  height: 50px;
+  right: 0;
+  display: inline;
+  position: absolute;
+  margin-top: 2.5px;
+  margin-right: 5px;
+}
+/* line 66, scss/style.scss */
+body #wrapper #item-holder {
+  background-color: white;
+  width: 300px;
+  height: auto;
+  right: 0;
+  top: 0;
+  margin-top: 55px;
+  position: absolute;
+  z-index: 50;
+  display: none;
+}
+/* line 78, scss/style.scss */
+body #wrapper #overlay {
+  display: none;
+  background-color: rgba(0, 0, 0, 0.8);
+  left: 50%;
+  top: 50%;
+  position: fixed;
+  z-index: 25;
+  height: 1400px;
+  margin-top: -700px;
+  width: 2400px;
+  margin-left: -1200px;
+}
+/* line 92, scss/style.scss */
+body #wrapper #product-wrapper {
+  width: 400px;
+  height: auto;
+  display: inline-block;
+  margin-left: 100px;
+  margin-bottom: 10px;
+  background-color: white;
+  box-shadow: 10px 10px 5px #888888;
+}
+/* line 102, scss/style.scss */
+body #wrapper #single-box {
+  border: solid 1px black;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  background-color: white;
+  z-index: 100;
+  height: 500px;
+  margin-top: -250px;
+  width: 800px;
+  margin-left: -400px;
+}
+/* line 115, scss/style.scss */
+body #wrapper #single-box .product_image {
+  float: left;
+  position: relative;
+}
+/* line 119, scss/style.scss */
+body #wrapper #single-box .product_info {
+  float: left;
+  position: relative;
+  width: 300px;
+  margin-left: 100px;
+}
+/* line 126, scss/style.scss */
+body #wrapper #inner {
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  margin: -100px 0 0 0;
+}
+/* line 135, scss/style.scss */
+body #wrapper #carousel img {
+  height: auto;
+  border: none;
+  display: block;
+  float: left;
+  padding: 0 10px;
+}
+/* line 143, scss/style.scss */
+body #wrapper .loading {
+  height: 200px;
+  width: 200px;
+  background-image: url("img/loading1.gif");
+  background-repeat: none;
+  margin: 0 auto;
+}
+/* line 150, scss/style.scss */
+body #wrapper .loading_text {
+  width: 200px;
+  height: 40px;
+  margin: 0 auto;
+  text-align: center;
+}
+/* line 158, scss/style.scss */
+body #page-not-found img {
+  width: 100px;
+  height: auto;
+  width: 100%;
+}
