--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 body {
-	background-image: url("img/OG2.jpg");
+	background-image: url("img/OG4.jpg");
 	background-size: 100vw 100vh;
 	background-repeat:no-repeat;
 	background-attachment:fixed;
@@ -73,6 +73,7 @@ body {
 			position: absolute;
 			z-index: 50;
 			display: none;
+			position: fixed;
 			.added-item{
 				margin: 3px;
 				border: 1px solid #C2C2C2;
@@ -134,10 +135,10 @@ body {
 			margin-left: -1200px;
 		}
 		#product-wrapper {
-			width: 300px;
-			height: 400px;
+			width: 550px;
+			height: 650px;
 			display: inline-block;
-			margin-left: 100px;
+			margin-left: 80px;
 			margin-bottom: 10px;
 			background-color: white;
 			box-shadow: 3px 3px 3px #C2C2C2;
@@ -149,6 +150,7 @@ body {
 					font-family: helvetica;
 					text-decoration: none;
 					color: black;
+					font-size: 25px;
 				}
 				#index-price{
 					margin-left: 10px;
@@ -160,9 +162,9 @@ body {
 					border-bottom: 1px solid black;
 				}
 				img{
-					margin-top: 72px;
-					height: 255px;
-					width: 218px;
+					margin-top: 32px;
+					height: 510px;
+					width: 436px;
 					margin-left: 38px;
 				}
 		}
@@ -215,12 +217,60 @@ body {
 			background-repeat: none;
 			margin: 0 auto;
 		}
-			.loading_text {
-				width: 200px;
-				height: 40px;
-				margin: 0 auto;
-				text-align: center;
+		.loading_text {
+			width: 200px;
+			height: 40px;
+			margin: 0 auto;
+			text-align: center;
+		}
+		#checkout-list{
+			background-color: rgba(255,255,255,0.7);
+			#checkout-cat{
+				margin: 15px;
+				font-family: helvetica;
+				text-align: left;
+				display: inline-block;
+				width: 100%;
+				
+				#cat-1{
+					font-family: helvetica;
+					text-align: left;
+					display: inline-block;
+					width: 30%;
+				}
+				#cat-2{
+					text-align: center;
+					top: 0;
+					width: 30%;
+						
+				}		
+				#cat-3{
+					float: right;
+					top: 0;
+					width: 30%;
+
+				}
 			}
+			#item-list{
+				#checkout-product-info{
+				border-bottom: 1px solid black;
+				font-family: helvetica;
+				font-size: 25px;
+					#span1{
+						margin-left: auto;
+						margin-right: auto;
+						width: 90%;
+					}
+					#span2{
+						float: right;
+
+					}
+				}
+			}
+			#pay{
+
+			}
+		}
 	}
 	#page-not-found{
 			img{
