--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,8 +19,9 @@ body {
 			margin-bottom: 20px;
 
 			li {
-				width: 110px;
-				border-radius: 5px;
+				width: 112px;
+				border-radius: 8px;
+				box-shadow: 3px 3px 2px #333333;
 				height: 30px;
 				list-style-type: none;
 				float: left;
@@ -30,10 +31,15 @@ body {
 			}
 
 			a {
+				width: 110px;
+				text-align: center;
+				margin-top: 5px;
+				text-shadow: 2px 2px #000000;	
+				display: block;
 				text-decoration: none;
 				color: white;
-				text-align: center;
 				text-transform: uppercase;
+				font-weight: bold;
 			}
 		}
 
@@ -66,7 +72,8 @@ body {
 		#item-holder{
 			background-color: white;
 			width: 300px;
-			height: auto;
+			max-height: 80vh;
+			overflow-y: scroll;
 			right: 0;
 			top: 0;
 			margin-top: 55px;
@@ -189,6 +196,11 @@ body {
 				position: relative;
 				width: 300px;
 				margin-left: 100px;
+
+				.fa-check {
+					display: none;
+					color: green;
+				}
 			}
 		}	
 		#inner {
