--- a/scss/style.scss
+++ b/scss/style.scss
@@ -237,48 +237,59 @@ body {
 		}
 		#checkout-list{
 			background-color: rgba(255,255,255,0.7);
-			#checkout-cat{
-				margin: 15px;
-				font-family: helvetica;
+			min-height: 400px;
+			.checkout-table{
+				margin: 10px;
+				width: 98%;
 				text-align: left;
-				display: inline-block;
-				width: 100%;
-				
-				#cat-1{
-					font-family: helvetica;
-					text-align: left;
-					display: inline-block;
-					width: 30%;
-				}
-				#cat-2{
-					text-align: center;
-					top: 0;
-					width: 30%;
-						
-				}		
-				#cat-3{
-					float: right;
-					top: 0;
-					width: 30%;
-
-				}
-			}
-			#item-list{
-				#checkout-product-info{
-				border-bottom: 1px solid black;
-				font-family: helvetica;
-				font-size: 25px;
-					#span1{
-						margin-left: auto;
-						margin-right: auto;
-						width: 90%;
-					}
-					#span2{
-						float: right;
-
+				border-collapse: collapse;
+				.table-head{
+					th{
+						padding-bottom: 30px;
+						font-family: helvetica;
+						font-size: 30px;
 					}
 				}
+				.table-body{
+					border-bottom: 1px solid black;
+					margin-bottom: 20px;
+					td{
+						font-family: helvetica;
+						font-size: 20px;
+						padding-top: 20px
+					}
+					#table-button{
+						button{
+							margin-top: 25px;
+							height: 45px;
+							float: right;
+							background-color: #FF0000;
+							color: white;
+							border-radius: 5px;
+							border: none;
+							text-decoration: none;
+							outline: none;
+							border-bottom: 5px solid #D40000;
+							border-left: 2px solid #D40000;
+
+						}
+						button:active{
+							margin-top: 25px;
+							height: 45px;
+							float: right;
+							background-color: #FF0000;
+							color: white;
+							border-radius: 5px;
+							border: none;
+							text-decoration: none;
+							outline: none;
+							border-top: 4px solid #D40000;
+							border-right: 2px solid #D40000;
+						}
+					}
+				}
 			}
+
 			#pay{
 
 			}
